Update why we want to quit the job by positive thinking

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,20 +7,26 @@
       <div class="pp-intro__text">
         <h1 class="pp-intro__title">ผ่านไป | PhaanPai</h1>
         <p class="pp-intro__lead">
-          ช่องที่แชร์เรื่องต่างๆของคนธรรมดาคนหนึ่ง
+          หากวันหนึ่งผมไม่อยู่แล้ว<br/>
+          นี่คือคำบอกเล่าว่าผมมองโลกนี้อย่างไร <br/>
+          ผ่านเลนส์ของผม <br/>
+          เพื่อทิ้งร่องรอยความคิด ชีวิตของคนธรรมดาคนหนึ่ง<br/>
+          สำหรับผู้ที่ผ่านเข้ามา ไม่ว่าจะเป็นคนในเวลานี้ หรือในอนาคต <br/>
+          ให้ได้ลองนำไปคิด ลองนำไปปรับใช้กับชีวิต
         </p>
         <div class="pp-intro__divider"></div>
         <p class="pp-intro__body">
-          • เรื่องชีวิต 🛟 <br/>
+          เป็นช่องที่แชร์เรื่องราวต่างๆ<br/>
+          • ชีวิต 🛟<br/>
           • ความรู้สึก 😶‍🌫️<br/>
           • ครอบครัว 👨‍👨‍👧‍👦<br/>
-          • ความสัมพันธ์ 🤝<br/>
+          • ความสัมพันธ์<br/>
           • การตัดสินใจ 🤯<br/>
           • งาน 💼<br/>
           • การเริ่มต้นใหม่ 🎬
          </p>
        
-        <p class="pp-intro__closing">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป </p>
+        <p class="pp-intro__closing">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป</p>
       </div>
 
       <div class="pp-intro__actions">
