Update Homepage and Aboutus content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,26 +7,18 @@
       <div class="pp-intro__text">
         <h1 class="pp-intro__title">ผ่านไป | PhaanPai</h1>
         <p class="pp-intro__lead">
-          หากวันหนึ่งผมไม่อยู่แล้ว<br/>
-          นี่คือคำบอกเล่าว่าผมมองโลกนี้อย่างไร <br/>
-          ผ่านเลนส์ของผม <br/>
-          เพื่อทิ้งร่องรอยความคิด ชีวิตของคนธรรมดาคนหนึ่ง<br/>
-          สำหรับผู้ที่ผ่านเข้ามา ไม่ว่าจะเป็นคนในเวลานี้ หรือในอนาคต <br/>
-          ให้ได้ลองนำไปคิด ลองนำไปปรับใช้กับชีวิต
+          เป็นช่องที่ บันทึกเรื่องราว ร่องรอยต่างๆ ว่า<br/>
+          เคยมองโลกใบนี้อย่างไร<br/>
         </p>
         <div class="pp-intro__divider"></div>
         <p class="pp-intro__body">
-          เป็นช่องที่แชร์เรื่องราวต่างๆ<br/>
-          • ชีวิต 🛟<br/>
-          • ความรู้สึก 😶‍🌫️<br/>
-          • ครอบครัว 👨‍👨‍👧‍👦<br/>
-          • ความสัมพันธ์<br/>
-          • การตัดสินใจ 🤯<br/>
-          • งาน 💼<br/>
-          • การเริ่มต้นใหม่ 🎬
+          ไม่จำเป็นต้องคิดเหมือนกัน<br/>
+          ขอแค่มันช่วยให้คุณ<br/>
+          เสียเวลา ลองผิด ลองถูก น้อยลง<br/>
+          และมีเวลา ไปใช้ชีวิตของตัวเอง มากขึ้น
          </p>
        
-        <p class="pp-intro__closing">เพราะทุกๆอย่าง มันจะค่อยๆ “ผ่านไป” — แต่เราไม่ได้หายไป</p>
+        <p class="pp-intro__closing">แค่นั้น… ผมก็ดีใจแล้ว</p>
       </div>
 
       <div class="pp-intro__actions">
