Update Homepage and Aboutus content 31 Dec 2025

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
         <div class="pp-intro__divider"></div>
         <p class="pp-intro__body">
           ไม่จำเป็นต้องคิดเหมือนกัน<br/>
-          ขอแค่มันช่วยให้คุณ<br/>
+          ขอแค่... มันมีประโยชน์กับคนอื่นบ้าง<br/>
           เสียเวลา ลองผิด ลองถูก น้อยลง<br/>
           และมีเวลา ไปใช้ชีวิตของตัวเอง มากขึ้น
          </p>
